<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BurgerActivity">

        <LinearLayout
            android:id="@+id/burgerLayout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                />

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@string/top_burger"
                    android:id="@+id/breadTop"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/burger_top" />

                <ImageView
                    android:contentDescription="@string/seed"
                    android:id="@+id/seed1"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:background="@drawable/seeds"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:rotation="-20" />

                <ImageView
                    android:contentDescription="@string/seed"
                    android:id="@+id/seed2"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:rotation="10" />

                <ImageView
                    android:contentDescription="@string/seed"
                    android:id="@+id/seed3"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="99dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:rotation="10" />

                <ImageView
                    android:id="@+id/seed4"
                    android:contentDescription="@string/seed"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="152dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:rotation="-40" />

                <ImageView
                    android:contentDescription="@string/seed"
                    android:id="@+id/seed5"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:rotation="-50" />

                <ImageView
                    android:id="@+id/seed6"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="300dp"
                    android:contentDescription="@string/seed"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:rotation="-60" />

                <ImageView
                    android:id="@+id/seed7"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="360dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="-60" />

            </RelativeLayout>


            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/saladLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/baconLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/cheeseLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/meatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>






            <ImageView
                android:background="@drawable/burger_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/bottom_burger"

                />




        </LinearLayout>



        <LinearLayout
            android:id="@+id/prefLayout"
            android:layout_below="@+id/burgerLayout"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="#CF8F2E"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price"

                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/totalpriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bun_price"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/removeSalad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>



                <TextView
                    android:layout_width="70dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/salad"
                    android:textStyle="bold"

                    />


                <androidx.cardview.widget.CardView
                    android:id="@+id/addSalad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>




            </LinearLayout>
            <View
                android:layout_height="15dp"
                android:layout_width="0dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/removeBacon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>



                <TextView
                    android:layout_width="70dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/bacon"
                    android:textStyle="bold"

                    />


                <androidx.cardview.widget.CardView
                    android:id="@+id/addBacon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>




            </LinearLayout>

            <View
                android:layout_height="15dp"
                android:layout_width="0dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/removeCheese"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>



                <TextView
                    android:layout_width="70dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/cheese"
                    android:textStyle="bold"

                    />


                <androidx.cardview.widget.CardView
                    android:id="@+id/addCheese"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>




            </LinearLayout>
            <View
                android:layout_height="15dp"
                android:layout_width="0dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/removeMeat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>



                <TextView
                    android:layout_width="70dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/meat"
                    android:textStyle="bold"

                    />


                <androidx.cardview.widget.CardView
                    android:id="@+id/addMeat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="#8F5E1E"

                    >


                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>




            </LinearLayout>

            <Button
                android:id="@+id/orderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_marginTop="15dp"
                android:backgroundTint="#C7C6C6"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />


        </LinearLayout>




        <View
            android:layout_width="match_parent"
            android:layout_below="@+id/prefLayout"
            android:layout_height="60dp"
            />
    </RelativeLayout>



</ScrollView>